--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "march-madness-2024",
+  "name": "march-madness-2024-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
