--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "pinia": "^2.1.7",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.35.0",
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.68",
