--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "cheerio": "^1.0.0-rc.12",
+    "csv-parser": "^3.0.0",
     "dice-coefficient": "^2.1.1",
     "nodemon": "^3.1.0",
     "redis": "^4.6.13",
